# auth-service

./: .gitignore  .pre-commit-config.yaml  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements.txt
scripts/: create_identity.py
src/: constants.py  jwt.py  rest.py  schemas.py  settings.py  storage.py  utils.py
src/controllers/: __init__.py  auth.py  vk.py  yandex.py
src/core/: base.py  constants.py  exeptions.py  schemas.py  utils.py
src/database/: __init__.py  base.py  crud.py  db_configs.py  models.py  repository.py  session.py
src/migrations/: env.py
src/migrations/versions/: 2025_08_01_2143-eeb6a68b368e_init.py  2025_08_13_2026-16ce4eea21ca_init.py
src/routers/: __init__.py  auth.py  vk.py  yandex.py
